--- a/.env.example
+++ b/.env.example
@@ -31,11 +31,11 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
 MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=purunjamu@gmail.com
+MAIL_FROM_NAME="Larashop"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
