--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
+        "laravolt/avatar": "^4.1",
         "unisharp/laravel-filemanager": "^2.4"
     },
     "require-dev": {
