--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^1.0",
         "darryldecode/cart": "^4.2",
         "doctrine/dbal": "^3.3",
         "fruitcake/laravel-cors": "^2.0",
@@ -18,6 +19,7 @@
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
         "laravolt/avatar": "^4.1",
+        "maatwebsite/excel": "^3.1",
         "unisharp/laravel-filemanager": "^2.4"
     },
     "require-dev": {
