--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/General.php"
+            "app/Helpers/General.php",
+            "app/Helpers/Global.php"
         ]
     },
     "autoload-dev": {
